render of normals-colored sphere with ground

--- a/src/InOneWeekend/C/meson.build
+++ b/src/InOneWeekend/C/meson.build
@@ -5,10 +5,22 @@ project(
   default_options: ['warning_level=3', 'werror=false', 'c_std=gnu23'],
 )
 
+glib_deb = dependency('glib-2.0')
+
 # math library
 cc = meson.get_compiler('c')
 m_dep = cc.find_library('m')
 
-source_files = files('color.c', 'main.c', 'point.c', 'ray.c', 'sphere.c', 'sphere.c', 'vec3.c')
+source_files = files(
+  'color.c',
+  'hittable.c',
+  'main.c',
+  'point.c',
+  'ray.c',
+  'sphere.c',
+  'sphere.c',
+  'utils.c',
+  'vec3.c',
+)
 
-executable('raytracer', source_files, dependencies: m_dep, install: false)
+executable('raytracer', source_files, dependencies: [m_dep, glib_deb], install: false)
