up to listing 52
Needs debugging!

--- a/src/InOneWeekend/C/meson.build
+++ b/src/InOneWeekend/C/meson.build
@@ -14,7 +14,9 @@ source_files = files(
   'color.c',
   'hittable.c',
   'interval.c',
+  'lambertian.c',
   'main.c',
+  'metal.c',
   'point.c',
   'ray.c',
   'sphere.c',
