--- a/src/InOneWeekend/C/meson.build
+++ b/src/InOneWeekend/C/meson.build
@@ -13,10 +13,10 @@ source_files = files(
   'camera.c',
   'color.c',
   'dielectric.c',
-  'hittable.c',
   'interval.c',
   'lambertian.c',
   'main.c',
+  'material.c',
   'metal.c',
   'point.c',
   'ray.c',
