output file arg

--- a/src/InOneWeekend/C/meson.build
+++ b/src/InOneWeekend/C/meson.build
@@ -10,9 +10,11 @@ cc = meson.get_compiler('c')
 m_dep = cc.find_library('m')
 
 source_files = files(
+  'args.c',
   'camera.c',
   'color.c',
   'dielectric.c',
+  'globals.c',
   'interval.c',
   'lambertian.c',
   'main.c',
