start "The Next Week"

--- a/src/TheNextWeek/Cpp/meson.build
+++ b/src/TheNextWeek/Cpp/meson.build
@@ -5,8 +5,11 @@ project(
   default_options: ['warning_level=3', 'cpp_std=c++14'],
 )
 
+incdir = include_directories('external')
+
 executable(
   'raytracer',
   'main.cc',
+  include_directories: incdir,
   install: false,
 )
