Solid Textures: A Checker Texture

--- a/src/TheNextWeek/C/meson.build
+++ b/src/TheNextWeek/C/meson.build
@@ -14,6 +14,7 @@ source_files = files(
   'args.c',
   'bvh_node.c',
   'camera.c',
+  'checker_texture.c',
   'color.c',
   'dielectric.c',
   'globals.c',
@@ -25,6 +26,7 @@ source_files = files(
   'metal.c',
   'point.c',
   'ray.c',
+  'solid_color.c',
   'sphere.c',
   'sphere.c',
   'utils.c',
