--- a/src/TheNextWeek/C/meson.build
+++ b/src/TheNextWeek/C/meson.build
@@ -36,6 +36,9 @@ source_files = files(
   'main.c',
   'material.c',
   'metal.c',
+  'noise_texture.c',
+  'perlin.c',
+  'perlin_spheres_scene.c',
   'point.c',
   'ray.c',
   'solid_color.c',
