--- a/src/TheNextWeek/C/textures/meson.build
+++ b/src/TheNextWeek/C/textures/meson.build
@@ -2,5 +2,11 @@ source_files += files(
   'checker.c',
   'image_texture.c',
   'noise.c',
+  'noise_freq.c',
+  'noise_hermitian.c',
+  'noise_lattice.c',
+  'noise_phase.c',
+  'noise_smooth.c',
+  'noise_turb.c',
   'solid_color.c',
 )
