--- a/src/TheNextWeek/C/hittables/meson.build
+++ b/src/TheNextWeek/C/hittables/meson.build
@@ -1,8 +1,9 @@
 source_files += files(
-  'bvh_node.c',
-  'hittable_list.c',
-  'quad.c',
-  'sphere.c',
-  'triangle.c',
-  'translate.c',
+    'bvh_node.c',
+    'hittable_list.c',
+    'quad.c',
+    'rotate_y.c',
+    'sphere.c',
+    'translate.c',
+    'triangle.c',
 )
