--- a/src/TheNextWeek/C/math/meson.build
+++ b/src/TheNextWeek/C/math/meson.build
@@ -1,6 +1,1 @@
-source_files += files(
-  'color.c',
-  'interval.c',
-  'point.c',
-  'vec3.c',
-)
+source_files += files('color.c', 'interval.c', 'point.c', 'vec3.c')
