--- a/src/TheNextWeek/C/hittables/meson.build
+++ b/src/TheNextWeek/C/hittables/meson.build
@@ -1,9 +1,10 @@
 source_files += files(
-    'bvh_node.c',
-    'hittable_list.c',
-    'quad.c',
-    'rotate_y.c',
-    'sphere.c',
-    'translate.c',
-    'triangle.c',
+  'bvh_node.c',
+  'constant_medium.c',
+  'hittable_list.c',
+  'quad.c',
+  'rotate_y.c',
+  'sphere.c',
+  'translate.c',
+  'triangle.c',
 )
